Add HTML Layout and classes and CSS styles

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <div class="visual">
+            <img src="./halie-west-25xggax4bSA-unsplash.jpg" alt="Green leaf plant in close up photography">
+            <div class="link">Photo by <a href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></div>
+            <div class="logo">MWTHEKING</div>
+        </div>
+        
+        <div class="sign-in">
+            <div class="text">Test</div>
+        </div>
+    </div>
 
+      
 </body>
 </html>
