Add fonts and background image
added fonts and background image and updated img src

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="visual">
-            <img src="./halie-west-25xggax4bSA-unsplash.jpg" alt="Green leaf plant in close up photography">
+            <img src="./background_img.jpg" alt="Green leaf plant in close up photography">
             <div class="link">Photo by <a href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></div>
             <div class="logo">MWTHEKING</div>
         </div>
